# autocoder-expanded

./: .gitignore  README.md
examples/: autocoder-simple.amxd  autocoder-simple.maxpat  drunk_walk.js  fancy-fft-internal-ext.maxpat  rand_logic.maxpat
examples/autocoder-simple_wrapper/: autocoder-simple_wrapper.maxproj
examples/autocoder-simple_wrapper/patchers/: wrapper.maxpat
source/basics/autocoder/: CMakeLists.txt  autocoder.c  c_api.h
support/: install.sh  tensorflowlite_c.dll.if.lib
